Bug 434473 - Dropdow command list freeze system
Summary: Dropdow command list freeze system
Status: RESOLVED FIXED
Alias: None
Product: Ruqola
Classification: Applications
Component: frontend (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: David Faure
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-03-16 07:47 UTC by Angel Docampo
Modified: 2021-03-21 23:19 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Dropdown freezing plasma (1.67 MB, video/mp4)
2021-03-16 07:47 UTC, Angel Docampo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Angel Docampo 2021-03-16 07:47:00 UTC
Created attachment 136721 [details]
Dropdown freezing plasma

SUMMARY
When you start typing a command or emoji on the chat textbox, and the dropdown appears, Plasma becomes completely unresponsive. 

STEPS TO REPRODUCE
1.  Open a chat
2.  Start typing a command (/command or :emotji)

OBSERVED RESULT
when the dropdown appears, move the mouse and click on any region of the desktop and see how it doesn't respond to clicks, or mouseove.

EXPECTED RESULT
Desktop shold be responsive, or at least, by left-clicking outisde the dropdown, this should be collapsed and desktop be responsive, as other plasma application does.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Arch Linux
KDE Plasma Version: 5.21.2
KDE Frameworks Version: 5.79.0
Qt Version: 5.15.2
Comment 1 David Faure 2021-03-20 16:25:25 UTC
Git commit 7490218aa9b6bedd9175d8645e2dd815be592667 by David Faure.
Committed on 20/03/2021 at 16:24.
Pushed by dfaure into branch 'master'.

Fix the completion popup not going away when clicking elsewhere.

This is actually a bug in QAbstractScrollArea...

M  +11   -0    src/widgets/common/completionlistview.cpp
M  +1    -0    src/widgets/common/completionlistview.h

https://invent.kde.org/network/ruqola/commit/7490218aa9b6bedd9175d8645e2dd815be592667
Comment 2 Angel Docampo 2021-03-20 18:04:51 UTC
I can confirm it works better now. Desktop effects continue unresponsive (ie: hovering cursor on plasma taskbar or tray icon items doesn't highlight or fire any popup) , but clicking in any item outside the dropdown, collapses the dropdown, which is the normal behaviour on Plasma applications (I think desktop effect should be responsive, but that's not ruqola's fault).

:)
Comment 3 David Faure 2021-03-21 19:17:49 UTC
Qt grabs the mouse at the X11 level when a popup is shown, other processes don't see it, AFAIK.
Comment 4 Angel Docampo 2021-03-21 23:19:17 UTC
Yes, this must be the ancient X11 bug, I think this will be solved on wayland, afaik.