Fix the completion popup not going away when clicking elsewhere.

This is actually a bug in QAbstractScrollArea...

BUG: 434473